Adds firebase_chat_id

--- a/src/profiles/templates/profiles/show_profile.html
+++ b/src/profiles/templates/profiles/show_profile.html
@@ -6,6 +6,9 @@
 {% block title %}{{ block.super }}Profile{% endblock %}
 
 {% block container %}
+<div id="user-profile-id" style="display:none">
+    {{ show_user.id }}
+</div>
 
 <div class="container profile-head">
   <div class="row">
