--- a/src/static/site/css/chat.css
+++ b/src/static/site/css/chat.css
@@ -2,18 +2,18 @@ html,body{
 	font-family: 'Open Sans', sans-serif;
 }
 .chat{
-	width: 100vw;
+	width: 100%;
 	height: 100vh;
 	display: flex;
 }
 .chat__members-panel{
-	flex-basis: 25%;
+	flex-basis: 30%;
 	background: #333648;
 	height: 100vh;
 	overflow-y: scroll;
 }
 .chat__messages-panel{
-	flex-basis: 75%;
+	flex-basis: 70%;
 	background: #f3f5f8;
 	height: 100vh;
 	overflow-y: scroll;
