--- a/src/templates/chat.html
+++ b/src/templates/chat.html
@@ -20,7 +20,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.21/angular-ui-router.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/5.8.0/firebase.js"></script>
 
-  <script src="{% static 'site//js/app.js' %}"></script>
+  <script src="{% static 'site/js/app.js' %}"></script>
   <script src="{% static 'site/js/controllers/appCtrl.js' %}"></script>
   <script src="{% static 'site/js/controllers/chatCtrl.js' %}"></script>
   <script src="{% static 'site/js/services/dataService.js' %}"></script>
