--- a/src/templates/idCard.html
+++ b/src/templates/idCard.html
@@ -58,6 +58,10 @@
 		margin-top: auto;
 		padding: 16px 32px;
 	}
+	.id__Card:nth-child(2){
+		margin-left: 24px;
+		margin-right: 24px;
+	}
   </style>
 </head>
 <body>
@@ -71,8 +75,44 @@
   			<img src="https://www.incubateind.com/mshack/assets/img/middle-bg.svg" style="display: block;margin: 0 auto;width: 200px;">
   		</div>
   		<div class="card__body">
+  			<img src="https://media.licdn.com/dms/image/C5103AQHIZSzXTAouNw/profile-displayphoto-shrink_800_800/0?e=1553731200&v=beta&t=8Qm_W4l5X8T-mK-VGZvBIt6_5CE_fcDUEJVL-wF-juw" class="card__avatar">
+  			<div class="card__member">Aayushi Jain</div>
+  			<div class="card__member--team">#1 Athena</div>
+  		</div>
+  		<div class="card__footer">
+  			<div style="color: #3742fa;font-size: 12px;font-weight: normal;text-align: center;margin-bottom: 5px;">Powered By</div>
+  			<img src="https://www.incubateind.com/mshack/assets/img/MS-Azure_logo_horiz_c-gray_rgb.png" style="display: block;margin: 0px auto;width: 150px;">
+  		</div>
+  	</div>
+  	<div class="id__Card">
+  		<div class="card__header">
+  			<div style="background-color: #1e2af9;color: #fff;padding: 16px;border-top-left-radius: 5px;border-top-right-radius: 5px;margin-bottom: 16px;">
+  				<div style="font-weight: bold;font-size: 18px;text-align: center;font-size: .875rem;
+	    line-height: 2.25rem;text-transform: uppercase;">Innovators</div>
+  			</div>
+  			<img src="https://www.incubateind.com/mshack/assets/img/middle-bg.svg" style="display: block;margin: 0 auto;width: 200px;">
+  		</div>
+  		<div class="card__body">
   			<img src="https://media.licdn.com/dms/image/C5103AQEYUePZ1z_grw/profile-displayphoto-shrink_800_800/0?e=1553731200&v=beta&t=XosVIuLsuWdpnsDo9Sb4qzxzXGXgY8uAO9_A1WgH7xQ" class="card__avatar">
   			<div class="card__member">Umang Shukla</div>
+  			<div class="card__member--team">#1 Athena</div>
+  		</div>
+  		<div class="card__footer">
+  			<div style="color: #3742fa;font-size: 12px;font-weight: normal;text-align: center;margin-bottom: 5px;">Powered By</div>
+  			<img src="https://www.incubateind.com/mshack/assets/img/MS-Azure_logo_horiz_c-gray_rgb.png" style="display: block;margin: 0px auto;width: 150px;">
+  		</div>
+  	</div>
+  	<div class="id__Card">
+  		<div class="card__header">
+  			<div style="background-color: #1e2af9;color: #fff;padding: 16px;border-top-left-radius: 5px;border-top-right-radius: 5px;margin-bottom: 16px;">
+  				<div style="font-weight: bold;font-size: 18px;text-align: center;font-size: .875rem;
+	    line-height: 2.25rem;text-transform: uppercase;">Innovators</div>
+  			</div>
+  			<img src="https://www.incubateind.com/mshack/assets/img/middle-bg.svg" style="display: block;margin: 0 auto;width: 200px;">
+  		</div>
+  		<div class="card__body">
+  			<img src="https://media.licdn.com/dms/image/C5103AQEUZZFM92YnGw/profile-displayphoto-shrink_200_200/0?e=1553731200&v=beta&t=1zv0DrfeQv0f9G4ipLdoCCzzRWk4BmrY5SEwZ1w0Kew" class="card__avatar">
+  			<div class="card__member">Amit Singh</div>
   			<div class="card__member--team">#1 Athena</div>
   		</div>
   		<div class="card__footer">
