--- a/src/templates/qrCode.html
+++ b/src/templates/qrCode.html
@@ -1,4 +1,5 @@
 <html lang="en" >
+{% load staticfiles %}
 <head>
   <title>qrCode scanner and generator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
